--- a/media/scss/_com_content_article.scss
+++ b/media/scss/_com_content_article.scss
@@ -27,7 +27,8 @@ div.com-content-article {
     }
   }
   nav.pagenavigation {
-    padding: 0 25px;
+    clear: both;
+    padding: 4em 25px 2em;
     span.pagination {
       justify-content: space-between;
     }
